# YumiBrowser

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL.md  MISRA-C.md  Preview.webm  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  THIRD_PARTY.md  build.sh  com.yumi.browser.desktop  com.yumi.browser.metainfo.xml  com.yumi.browser.yml  meson.build  meson.options  meson_options.txt
.gitea/: pull_request_template.md
.gitea/issue_template/: bug_report.yaml  config.yaml  feature_request.yaml  security_contact.yaml
docs/: 00-overview.md  01-host-runtime.md  02-binding-modules.md  03-sdk.md  04-cryptography.md  05-group-registrar.md  06-networking.md  07-shaders.md  08-stability-commitment.md  09-application-model.md  10-group-model.md  11-threat-model.md  12-rebroadcast-server.md  13-tamper-resistance.md  14-anti-sybil.md  15-moderator-accountability.md  16-webapp-distribution.md  17-infrastructure.md  18-recommended-deployment.md  19-ffmpeg.md  20-building.md  21-running-testing.md  22-project-structure.md  23-development-focus.md  24-roadmap.md  25-faq.md  26-social-design.md  27-webapp-development.md  28-wasm-api-surface.md  29-gpu-and-surfaces.md  30-data-text-media.md  31-putting-it-together.md  Doxyfile  doxygen-layout.xml
include/: clipboard_bindings.h  crypto.h  damage_tracker.h  dashboard_runtime.h  deps.h  duckdb_bindings.h  font_bindings.h  gles_bindings.h  gles_internal.h  gpu.h  group_registrar.h  handle_table.h  image_bindings.h  input_bindings.h  log_bindings.h  media_bindings.h  memory.h  network_bindings.h  runtime.h  sdl_bindings.h  slang_bindings.h  static_memory.h  text_bindings.h  video_bindings.h  webapp_runtime.h  wgpu_annotated.h  wgpu_bindings.h  wgpu_ffmpeg.h  yumi_client.h
include/network/: bbr.h  net.h  yumi_sudp_client.h  yumi_udp_client.h
scripts/: assemble_release.sh  bootstrap_submodules.sh  common.sh  desktop_entry.sh  install_local.sh  install_wasi_sdk.sh  meson_build.sh
sdk/: font_bitmap_atlas.h  font_fallback.h  text_shaping.h  wasm_clipboard.h  wasm_dashboard.h  wasm_ddb.h  wasm_file_types.h  wasm_font.h  wasm_gpu.h  wasm_gui.h  wasm_input.h  wasm_log.h  wasm_media.h  wasm_network.h  wasm_sdl.h  wasm_slang.h  wasm_surface.c  wasm_surface.h  wasm_text.h  wasm_webapp.h
sdk/templates/: dashboard_app_template.c  webapp_template.c
src/: clipboard_bindings.c  damage_tracker.c  dashboard_runtime.c  duckdb_bindings.c  ffmpeg_loader.c  ffmpeg_loader.h  font_bindings.c  gpu.c  input_bindings.c  log_bindings.c  main.c  media_bindings.c  network_bindings.c  sdl_bindings.c  slang_bindings.cpp  text_bindings.c  webapp_runtime.c  wgpu_bindings.c  wgpu_ffmpeg.c  yumi_client.c
src/crypto/: TODO.md  crypto.c
src/data/: yumdb_column.c  yumdb_condition.c  yumdb_data.h  yumdb_deleter.c  yumdb_inserter.c  yumdb_internal.h  yumdb_result.c  yumdb_row.c  yumdb_selector.c  yumdb_typedef.c  yumdb_updater.c  yumdb_value.c
src/group_registrar/: README.md  audit.c  behavior.c  blocklist.c  buf.c  buf.h  crypto.c  db.c  epoch.c  icon.c  identity.c  internal.h  invite.c  join.c  lifecycle.c  peer.c  retention.c  role.c  serialize.c  server.c  util.c  webapp.c
src/memory/: static_heap.c
src/network/: bbr.c  yumi_sudp_client.c  yumi_udp.c  yumi_udp_client.c
tests/: test_audit.c  test_buf.c  test_calendar.c  test_clay_layout.c  test_crypto.c  test_crypto_abstract.c  test_dashboard.c  test_db.c  test_delta.c  test_docbox.c  test_docbox2.c  test_join_verify.c  test_nodegraph.c  test_picturebox.c  test_registrar_full.c  test_static_heap.c  test_sudp_client.c  test_textbox.c  test_toolbox.c  test_treeview.c  test_udp_client.c  test_udp_session.c  test_unistring.c  test_yumi_client.c
